--- a/app/src/main/res/layout/activity_bavariancoffee_resep.xml
+++ b/app/src/main/res/layout/activity_bavariancoffee_resep.xml
@@ -5,30 +5,30 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/linear"
-    tools:context=".homepage">
+    android:background="@color/black"
+    tools:context=".bavariancoffee_resep">
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="411dp"
-        android:layout_height="461dp"
+        android:id="@+id/imageButton19"
+        android:layout_width="434dp"
+        android:layout_height="47dp"
+        android:background="@drawable/riple_abuabu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.521"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.075"
+        app:srcCompat="@drawable/group_20" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logo_homepage" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="435dp"
-        android:layout_height="94dp"
-        android:background="@drawable/riple_abuabu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.674"
-        app:srcCompat="@drawable/group_7" />
+        app:srcCompat="@drawable/bavariancoffee_resep" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
