--- a/app/src/main/res/layout/activity_icedmocha_resep.xml
+++ b/app/src/main/res/layout/activity_icedmocha_resep.xml
@@ -5,30 +5,32 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/linear"
-    tools:context=".homepage">
+    android:background="@color/black"
+    tools:context=".icedmocha_resep">
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="411dp"
-        android:layout_height="461dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logo_homepage" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="435dp"
-        android:layout_height="94dp"
+        android:id="@+id/imageButton17"
+        android:layout_width="424dp"
+        android:layout_height="43dp"
         android:background="@drawable/riple_abuabu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.674"
-        app:srcCompat="@drawable/group_7" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.069"
+        app:srcCompat="@drawable/group_17" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.388"
+        app:srcCompat="@drawable/icedmocha_resep" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
