--- a/app/src/main/res/layout/activity_italianespresso_resep.xml
+++ b/app/src/main/res/layout/activity_italianespresso_resep.xml
@@ -5,30 +5,29 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/linear"
-    tools:context=".homepage">
+    android:background="@color/black"
+    tools:context=".italianespresso_resep">
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="411dp"
-        android:layout_height="461dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logo_homepage" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="435dp"
-        android:layout_height="94dp"
+        android:id="@+id/imageButton13"
+        android:layout_width="429dp"
+        android:layout_height="46dp"
         android:background="@drawable/riple_abuabu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.674"
-        app:srcCompat="@drawable/group_7" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.055"
+        app:srcCompat="@drawable/group_13__1_" />
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.283"
+        app:srcCompat="@drawable/italianespresso_resep" />
 </androidx.constraintlayout.widget.ConstraintLayout>
